apps/base/coinpoet/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
    - name: postgres
      port: 5432
  selector:
    app: db
