apps/base/coinpoet/app-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coinpoet-app-ingress
spec:
  # patched in kustomize
  #tls:
  #- hosts:
  #    - beta.gpupoet.com
  # There must a a Certificate resource created that saves to this secret name
  #  secretName: beta-coinpoet-com-tls

  rules:
    - host: gpupoet.com
      http:
        paths:
          # Block external access to the cache revalidation endpoint
          - path: /ops/revalidate-cache
            pathType: Exact
            backend:
              service:
                name: nonexistent-service
                port:
                  number: 80

          # Allow all other traffic to the app
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
                port:
                  name: web-ui
